force-app/main/default/objects/Attendance__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Links attendance to a specific subject</description>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>