force-app/main/default/objects/Attendance__c/validationRules/Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Not_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Attendance date cannot be in the future.</errorMessage>
</ValidationRule>