force-app/main/default/objects/Attendance__c/validationRules/Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Date__c)</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Please select an attendance date.</errorMessage>
</ValidationRule>