force-app/main/default/objects/Attendance__c/validationRules/Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Status__c))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please select attendance status (Present, Absent, Leave).</errorMessage>
</ValidationRule>